<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

<ScrollView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:excludeFromRecents="true"
    android:background="@drawable/textbackground"
    tools:context="com.dev.mohamed.samacard.addCard.AddCardActivity">

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >



    <com.mikhaellopez.circularimageview.CircularImageView
        android:id="@+id/img_logo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:src="@drawable/apple"
        app:civ_border_color="@color/colorPrimary"
        app:civ_border_width="4dp"
        app:civ_shadow="true"
        app:civ_shadow_color="#8BC34A"
        app:civ_shadow_radius="10"
        />

    <TextView
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_your_picture_or_company_logo"/>



   <EditText
       android:id="@+id/ed_userName"
       android:hint="@string/userName"

       style="@style/editTextAddCard"/>

    <EditText
        android:inputType="textEmailAddress"
        android:id="@+id/ed_email"
        android:hint="@string/email"
        style="@style/editTextAddCard"/>

    <Spinner
        android:id="@+id/sp_country"
        style="@style/editTextAddCard"
        />

    <Spinner
        android:id="@+id/sp_governorate"
        android:entries="@array/governorates"
        style="@style/editTextAddCard"/>

    <EditText
        android:id="@+id/ed_companyName"
        android:hint="@string/company_name"
        style="@style/editTextAddCard"/>

    <EditText
        android:id="@+id/ed_positionName"
        android:hint="@string/position_in_company"
        style="@style/editTextAddCard"/>

    <EditText
        android:id="@+id/ed_adress"
        android:hint="@string/company_adress"
        style="@style/editTextAddCard"/>

    <Spinner
        android:id="@+id/sp_activity"
        android:entries="@array/activities"
        style="@style/editTextAddCard"/>

    <EditText
        android:id="@+id/ed_aboutActiviy"
        android:hint="@string/about_activiy"
        style="@style/editTextAddCard"/>

    <EditText
        android:id="@+id/ed_officialNum"
        android:hint="@string/official_number"
        android:inputType="phone"
        style="@style/editTextAddCard"/>

    <EditText
        android:id="@+id/ed_directNum"
        android:hint="@string/direct_number"
        android:inputType="phone"
        style="@style/editTextAddCard"/>



    <EditText
        android:id="@+id/ed_facebookPage"
        android:hint="@string/facebook_page"
        style="@style/editTextAddCard"/>

    <EditText
        android:id="@+id/ed_webSite"
        android:hint="@string/website"
        style="@style/editTextAddCard"/>

    <EditText
        android:id="@+id/whatsapp"
        android:hint="@string/whatsapp"
        android:inputType="phone"
        style="@style/editTextAddCard"/>



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">


        <at.markushi.ui.CircleButton
            android:id="@+id/bt_done"
            android:layout_margin="@dimen/paddingSmall"
            android:layout_width="64dip"
            android:layout_height="64dip"
            android:src="@drawable/ic_tick"
            app:cb_color="#99CC00"
            app:cb_pressedRingWidth="8dip" />


        <at.markushi.ui.CircleButton
            android:id="@+id/bt_cancel"
            android:layout_margin="@dimen/paddingSmall"
            android:layout_width="64dip"
            android:layout_height="64dip"
            android:src="@drawable/ic_unchecked"
            app:cb_color="#f44336"
            app:cb_pressedRingWidth="8dip" />


    </LinearLayout>

</LinearLayout>

</ScrollView>
</layout>