<?xml version="1.0" encoding="utf-8"?>


<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scroll"
    android:background="@drawable/textbackground"
    tools:context="com.dev.mohamed.samacard.card.CardActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/frame"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/textbackground"/>

        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/img_logo"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:src="@drawable/apple"
            app:civ_border_color="@color/colorPrimary"
            app:civ_border_width="4dp"
            app:civ_shadow="true"
            app:civ_shadow_color="#8BC34A"
            app:civ_shadow_radius="10"
            app:layout_constraintEnd_toEndOf="@id/frame"
            app:layout_constraintStart_toStartOf="@+id/frame"
            app:layout_constraintTop_toTopOf="@id/frame" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/img_logo">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_gravity="center"
                    style="@style/textViewCardStyle"
                    android:text="@string/name"/>
                <TextView
                    android:id="@+id/tv_name"
                    style="@style/textViewDataCardStyle"
                    android:text="Mohamed Ragab"
                    android:layout_gravity="center"
                    />
            </LinearLayout>


            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_gravity="center"
                    style="@style/textViewCardStyle"
                    android:text="@string/commercial_name"/>
                <TextView
                    android:id="@+id/tv_commercialName"
                    style="@style/textViewDataCardStyle"
                    android:text="Pepsi"
                    android:layout_gravity="center"
                    />
            </LinearLayout>


            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_gravity="center"
                    style="@style/textViewCardStyle"
                    android:text="@string/adress"/>
                <TextView
                    android:id="@+id/tv_adress"
                    style="@style/textViewDataCardStyle"
                    android:text="Cairo shobra el khema"
                    android:layout_gravity="center"
                    />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_gravity="center"
                    style="@style/textViewCardStyle"
                    android:text="@string/office_number"/>
                <TextView
                    android:id="@+id/tv_telephon"
                    android:drawableLeft="@drawable/ic_telephone"
                    android:drawableStart="@drawable/ic_telephone"
                    android:drawablePadding="@dimen/paddingSmall"
                    android:textColor="@color/colorPrimaryDark"
                    style="@style/textViewDataCardStyle"
                    android:text="0244010173"
                    android:layout_gravity="center"
                    />

            </LinearLayout>






        </LinearLayout>





    </android.support.constraint.ConstraintLayout>








</android.support.v4.widget.NestedScrollView>
